--- a/CTriax.vcxproj.filters
+++ b/CTriax.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="libWin\ClassChildController.h">
       <Filter>Header Files\libWin</Filter>
     </ClInclude>
+    <ClInclude Include="libWin\ChildProcedure.h">
+      <Filter>Header Files\libWin</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libWin\WinMaker.cpp">
@@ -114,6 +117,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="libWin\ClassChildController.cpp">
+      <Filter>Source Files\libWin</Filter>
+    </ClCompile>
+    <ClCompile Include="WndCtrlMonoSetup.cpp">
       <Filter>Source Files\libWin</Filter>
     </ClCompile>
   </ItemGroup>
