Added some files and detached childProc from procedure

--- a/CTriax.vcxproj
+++ b/CTriax.vcxproj
@@ -80,8 +80,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ChildProcedure.h" />
     <ClInclude Include="libWin\ActiveObject.h" />
-    <ClInclude Include="libWin\ChildProcedure.h" />
+    <ClInclude Include="libWin\ChildProcedure.cpp" />
     <ClInclude Include="libWin\ClassChildController.h" />
     <ClInclude Include="libWin\ClassController.h" />
     <ClInclude Include="libWin\ClassControllerMain.h" />
