Set the first draft of a layout for "Select" window. Not yet implemented "Force init" checkbox

--- a/CTriax.vcxproj.filters
+++ b/CTriax.vcxproj.filters
@@ -117,7 +117,7 @@
       <Filter>Source Files\libWin</Filter>
     </ClCompile>
     <ClCompile Include="WndCtrlMonoSetup.cpp">
-      <Filter>Source Files\libWin</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
