Added LgcCtrlLock files. Changed WndCtrlExp but it sill does not display stuff properly.

--- a/CTriax.vcxproj.filters
+++ b/CTriax.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="struct.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LgcCtrlLock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libWin\WinMaker.cpp">
@@ -150,6 +153,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SubCtrlEdit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LgcCtrlLock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
