--- a/CTriax.vcxproj
+++ b/CTriax.vcxproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <ClInclude Include="ClassDispatcher.h" />
     <ClInclude Include="ClassSynchro.h" />
+    <ClInclude Include="LgcCtrlLock.h" />
     <ClInclude Include="libWin\ActiveObject.h" />
     <ClInclude Include="libWin\ClassChildController.h" />
     <ClInclude Include="libWin\ClassController.h" />
@@ -118,6 +119,7 @@
   <ItemGroup>
     <ClCompile Include="ClassDispatcher.cpp" />
     <ClCompile Include="ClassSynchro.cpp" />
+    <ClCompile Include="LgcCtrlLock.cpp" />
     <ClCompile Include="libWin\ActiveObject.cpp" />
     <ClCompile Include="libWin\ClassChildController.cpp" />
     <ClCompile Include="libWin\ClassController.cpp" />
