--- a/CTriax.vcxproj.filters
+++ b/CTriax.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="SubCtrlCombo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SubCtrlRadio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libWin\WinMaker.cpp">
@@ -162,6 +165,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SubCtrlCombo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SubCtrlRadio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
