--- a/CTriax.vcxproj.filters
+++ b/CTriax.vcxproj.filters
@@ -93,9 +93,6 @@
     <ClInclude Include="LgcIface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SubCtrlButton.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libWin\WinMaker.cpp">
@@ -153,6 +150,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LgcIface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="struct.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
