--- a/CTriax.vcxproj
+++ b/CTriax.vcxproj
@@ -111,6 +111,7 @@
     <ClInclude Include="libWin\WindowEx.h" />
     <ClInclude Include="libWin\WinMaker.h" />
     <ClInclude Include="struct.h" />
+    <ClInclude Include="SubCtrlButton.h" />
     <ClInclude Include="SubCtrlEdit.h" />
     <ClInclude Include="WndCtrlExp.h" />
     <ClInclude Include="WndCtrlMonoSetup.h" />
