--- a/CTriax.vcxproj
+++ b/CTriax.vcxproj
@@ -112,7 +112,9 @@
     <ClInclude Include="libWin\WinMaker.h" />
     <ClInclude Include="struct.h" />
     <ClInclude Include="SubCtrlButton.h" />
+    <ClInclude Include="SubCtrlCombo.h" />
     <ClInclude Include="SubCtrlEdit.h" />
+    <ClInclude Include="SubCtrlList.h" />
     <ClInclude Include="WndCtrlExp.h" />
     <ClInclude Include="WndCtrlMonoSetup.h" />
   </ItemGroup>
@@ -134,7 +136,9 @@
     <ClCompile Include="libWin\WinMaker.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SubCtrlButton.cpp" />
+    <ClCompile Include="SubCtrlCombo.cpp" />
     <ClCompile Include="SubCtrlEdit.cpp" />
+    <ClCompile Include="SubCtrlList.cpp" />
     <ClCompile Include="WndCtrlExp.cpp" />
     <ClCompile Include="WndCtrlMonoSetup.cpp" />
   </ItemGroup>
