--- a/CTriax.vcxproj.filters
+++ b/CTriax.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="SubCtrlRadio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CustomControls.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libWin\WinMaker.cpp">
@@ -168,6 +171,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SubCtrlRadio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CustomControls.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
